--- a/userservice/first-service/src/main/resources/application.yml
+++ b/userservice/first-service/src/main/resources/application.yml
@@ -1,11 +1,15 @@
 server:
-  port: 8081
-
+  port: 0
+#  port: 8081
 spring:
   application:
     name: my-first-service
 
 eureka:
   client:
-    register-with-eureka: false
-    fetch-registry: false
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka
+  instance:
+    instance-id: ${spring.cloud.client.hostname}:${spring.application.instance_id:${random.value}}   ### 추가
