--- a/userservice/user-service/src/main/resources/application.yml
+++ b/userservice/user-service/src/main/resources/application.yml
@@ -5,9 +5,15 @@ spring:
   application:
     name: user-service
 
+  rabbitmq:
+    host: 127.0.0.1
+    port: 5672
+    username: guest
+    password: guest
+
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/testdb?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
+    url: jdbc:mysql://localhost:3306/testdb?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
     username: root
     password: 
   jpa:
@@ -38,5 +44,12 @@ logging:
   level:
     com.gbitkim.userservice : DEBUG
 
-token:
-  expiration_hours: 24
+management:
+  endpoints:
+    web:
+      exposure:
+        include: refresh, health, beans
+        include: refresh, health, beans, busrefresh
+
+#token:
+#  expiration_hours: 24
