RestTemplate Test하기 apigatewayIP/user-service/users/{userId} 요청 시 order-service 주문 연결

--- a/userservice/user-service/src/main/resources/bootstrap.yml
+++ b/userservice/user-service/src/main/resources/bootstrap.yml
@@ -2,6 +2,6 @@ spring:
   cloud:
     config:
       uri: http://127.0.0.1:8888
-      name: ecommerce # 적용할 파일명
+      name: user-service # 적용할 파일명
   profiles:
-    active: prod
+    active: dev
