--- a/apigateway-service/src/main/resources/bootstrap.yml
+++ b/apigateway-service/src/main/resources/bootstrap.yml
@@ -2,6 +2,6 @@ spring:
   cloud:
     config:
       uri: http://127.0.0.1:8888
-      name: ecommerce # 적용할 파일명
-  profiles:
-    active: dev
+      name: config-service # 적용할 파일명
+#  profiles:
+#    active: dev
