order-service (요청 URL 변경) - 변경전 : http://ORDER-SERVICE/order-service - 변경후 : http://ORDER-SERVICE/

--- a/apigateway-service/src/main/resources/application.yml
+++ b/apigateway-service/src/main/resources/application.yml
@@ -77,7 +77,7 @@ spring:
             - Path=/order-service/**
           filters:
             - RemoveRequestHeader=Cookie
-#            - RewritePath=/order-service/(?<segment>.*), /$\{segment}
+            - RewritePath=/order-service/(?<segment>.*), /$\{segment}
 management:
   endpoints:
     web:
