--- a/userservice/user-service/pom.xml
+++ b/userservice/user-service/pom.xml
@@ -81,6 +81,12 @@
             <version>0.9.0</version>
         </dependency>
 
+        <!-- Feign Client -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-config</artifactId>
