--- a/userservice/catalog-service/src/main/resources/application.yml
+++ b/userservice/catalog-service/src/main/resources/application.yml
@@ -12,7 +12,7 @@ spring:
     password: 
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
     generate-ddl: false
     show-sql: true
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
