--- a/userservice/order-service/src/main/resources/application.yml
+++ b/userservice/order-service/src/main/resources/application.yml
@@ -12,7 +12,7 @@ spring:
     password: gbitkim
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
     properties:
       hibernate.format_sql: true
